# finops-analyzer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample_portfolio.csv
src/finops_analyzer/: __init__.py  analyzer.py  cli.py  config.py  dashboard.py  models.py  sentiment.py  stock_fetcher.py
tests/: __init__.py  test_stock_fetcher.py
